<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="result">0123456787198471897</string>
    <string name="button11">bờ lanh</string>
    <string name="button12">bờ lanh</string>
    <string name="button13">bờ lanh</string>
    <string name="button14">bờ lanh</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="bs">BS</string>
    <string name="divide">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">×</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtract">−</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="add">+</string>
    <string name="sign">+/-</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
</resources>