<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/equation"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:autoSizeMinTextSize="72sp"
        android:autoSizeTextType="uniform"
        android:background="@color/dark_gray"
        android:gravity="end"
        android:text="@string/result"
        android:textIsSelectable="true"
        android:textSize="80sp"
        android:maxLines="1"
        tools:targetApi="o" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clear_entry"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/ce"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clear"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/c"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/backspace"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/bs"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/divide"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/divide"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/seven"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/light_button_style"
            android:text="@string/seven"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/eight"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/light_button_style"
            android:text="@string/eight"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nine"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/light_button_style"
            android:text="@string/nine"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/multiply"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/multiply"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/four"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/light_button_style"
            android:text="@string/four"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/five"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/light_button_style"
            android:text="@string/five"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/six"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/light_button_style"
            android:text="@string/six"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/subtract"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/subtract"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/one"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/light_button_style"
            android:text="@string/one"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/two"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/light_button_style"
            android:text="@string/two"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/three"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/light_button_style"
            android:text="@string/three"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/add"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="2dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp"
        android:paddingVertical="5dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/sign"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/zero"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/light_button_style"
            android:text="@string/zero"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dot"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/dot"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/equal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/equal"
            android:textSize="28sp"
            tools:ignore="NestedWeights" />
    </LinearLayout>


</LinearLayout>